se agrego una etiqueta div y se agrego una etiqueta para ir hacia la siguiente pestaña presionando el vinculo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div {
+            background-color: lightgray;
+            padding: 70px;
+            border: 8px solid black;
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hola Mundo!!</h1>
-    <p>Este es un Parrafo</p>
+    <div>
+        <h1>Hola Mundo!!</h1>
+        <p>Este es un Parrafo</p>
+        <a href="https://github.com/ccs14scc">apretame</a>
+    </div>
 </body>
 </html>
