--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        div {
-            background-color: lightgray;
-            padding: 70px;
-            border: 8px solid black;
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/ccs/estilos.css">
 </head>
 <body>
     <div>
